<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
<resources>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="dropbox_username">Enter your OneDrive Username</string>
    <string name="purchase">Secure Login</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">Crypto</string>
    <string name="item_description">Making Cloud Storage Safe.</string>
    <string name="purchase_done">Login Successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key" >use_fingerprint_to_authenticate_key</string>
    <string name="title_activity_selection">Selection</string>
    <string name="encryptButton">Encrypt</string>
    <string name="decryptButton">Decrypt</string>
    <string name="deleteButton">Delete</string>
    <string name="title_activity_encryption">Encryption</string>
    <string name="title_activity_cloud_selection">Cloud Selection</string>
    <string name="AddCloudStorage">Add</string>
    <string name="app_name2">SaverSample</string>
    <string name="main_welcomeText">OneDriveSDK Saver Sample</string>
    <string name="main_startSaverButton">Save a File</string>
    <string name="file_name_edit_text">MyFile.txt</string>
    <string name="file_name_label">File Name:</string>
    <string name="file_size_label">File Size (KB):</string>
    <string name="file_size_edit_text">100</string>
    <string name="file_name_hint">Name of the file to upload to OneDrive</string>
    <string name="file_size_hint">Size of the file to upload to OneDrive in kilobytes</string>
    <string name="error_message_none">None</string>
    <string name="result_table_label">Saver Results</string>
    <string name="overall_result_label">Result:</string>
    <string name="overall_result_success">Success</string>
    <string name="overall_result_failure">Failure</string>
    <string name="error_type_label">Error Type:</string>
    <string name="debug_error_label">Debug Error:</string>
    <string name="app_name3">PickerSample</string>
    <string name="main_welcomeTexts">OneDriveSDK Picker Sample</string>
    <string name="main_radioWebViewLink">Web View Link</string>
    <string name="main_radioDownloadLink">Download Link</string>
    <string name="main_startPickerButton">Pick a File</string>
    <string name="main_resultTableProperty">Property</string>
    <string name="main_resultTableValue">Value</string>
    <string name="main_resultTableName">Name:</string>
    <string name="main_resultTableLinkType">LinkType:</string>
    <string name="main_resultTableLink">Link:</string>
    <string name="main_resultTableFileSize">File Size:</string>
    <string name="main_resultTableThumbnails">Thumbnails:</string>
    <string name="main_thumbnailTitle1">Thumbnail: Small</string>
    <string name="main_thumbnailTitle2">Thumbnail: Medium</string>
    <string name="main_thumbnailTitle3">Thumbnail: Large</string>
    <string name="main_thumbnailDefaultUrl">https://www.onedrive.com</string>
    <string name="main_thumbnailDescription">A thumbnail</string>
    <string name="main_resultSaveAsLabel">Save Locally</string>
    <string name="main_resultSaveAsButtonLabel">Save</string>
    <color name="main_thumbnailBackgroundColor">#0043ae</color>


    <dimen name="main_marginSides">16dp</dimen>

</resources>
