<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    
        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/main_welcomeText"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />
    
        <Space
            android:id="@+id/welcomeTextPickerOptionsSpacer"
            android:layout_below="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_majorSpacer" />
    
        <RelativeLayout
            android:id="@+id/pickerOptionsLayout"
            android:layout_below="@+id/welcomeTextPickerOptionsSpacer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/main_marginSides"
            android:layout_marginRight="@dimen/main_marginSides"
            android:layout_marginBottom="25dp">
    
            <Space
                android:id="@+id/radioButtonSpacer"
                android:layout_width="40dp"
                android:layout_height="wrap_content" />
            
            <Button
                android:id="@+id/startPickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_startPickerButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="#FF6140" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/saveAsArea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pickerOptionsLayout"
            android:paddingRight="@dimen/main_marginSides"
            android:paddingLeft="@dimen/main_marginSides"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="25dp">

            <Button
                android:id="@+id/saveAsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Save locally"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:background="#FF6140" />

        </RelativeLayout>
    
        <TableLayout
            android:id="@+id/table1"
            android:layout_below="@+id/saveAsArea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/main_marginSides"
            android:layout_marginRight="@dimen/main_marginSides" >

            <TableRow
                android:id="@+id/tableRowHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView android:text="@string/main_resultTableProperty" android:textStyle="bold" />
                <TextView android:text="@string/main_resultTableValue" android:textStyle="bold" />
            </TableRow>
            
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView android:text="@string/main_resultTableName"/>
                <TextView android:id="@+id/nameResult" android:textIsSelectable="true" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView android:text="@string/main_resultTableLinkType"/>
                <TextView android:id="@+id/linkTypeResult" android:textIsSelectable="true" />
            </TableRow>
    
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView android:text="@string/main_resultTableLink" />

                <TextView
                    android:id="@+id/linkResult"
                    android:textIsSelectable="true" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView android:text="@string/main_resultTableFileSize" />

                <TextView
                    android:id="@+id/fileSizeResult"
                    android:textIsSelectable="true" />
            </TableRow>


        </TableLayout>

        <Space
            android:id="@+id/tableSpacer"
            android:layout_below="@+id/table1" 
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_majorSpacer" />

        
    </RelativeLayout>
    
</ScrollView>